--- a/src/modules/registration/views/thanks.html
+++ b/src/modules/registration/views/thanks.html
@@ -1,3 +1,5 @@
 <section>
-	Thanks
+	<p>Thanks for registering!</p>
+	<p>You should recieve an email at {{vm.user.email}} shortly, with a link to complete your registration.</p>
+	<p>&emdash; The Assurant Fantasy Trader Team</p>
 </section>
