--- a/src/modules/registration/views/register.html
+++ b/src/modules/registration/views/register.html
@@ -1,23 +1,22 @@
 <section class="register" data-ng-controller="RegistrationCtrl as vm">
 	<h1>Fantasy Trader Registration</h1>
-	<form class="registration-form">
+	<div class="registration-form">
 		<div class="form-group">
-			<input type="text" name="firstName" class="form-input" placeholder="First Name" data-ng-model="vm.user.firstName" required/>
+			<input type="text" name="firstName" class="form-input" placeholder="First Name" data-ng-model="vm.user.FirstName" required/>
 		</div>
 
 		<div class="form-group">
-			<input type="text" name="lastName" class="form-input" placeholder="Last Name" data-ng-model="vm.user.lastName" required/>
+			<input type="text" name="lastName" class="form-input" placeholder="Last Name" data-ng-model="vm.user.LastName" required/>
 		</div>
 
 		<div class="form-group">
-			<input type="email" name="email" class="form-input" placeholder="Email Address" data-ng-model="vm.user.email" required/>
+			<input type="email" name="email" class="form-input" placeholder="Email Address" data-ng-model="vm.user.Email" required/>
 		</div>
 
-		<div class="captcha" vc-recaptcha theme="white" lang="en" data-ng-model="vm.user.captcha"	key="'6LcJO8ESAAAAAFca2-gBw4azCGEG4HFxNFzNPp1K'">
-    </div>
+		<div class="captcha" vc-recaptcha theme="'light'" lang="en" data-ng-model="vm.user.Recaptcha.Response"	key="vm.user.Recaptcha.Secret"></div>
 
 		<div class="form-actions">
 			<a data-ng-href="#" data-ng-click="vm.register()">Register</a>
 		</div>
-	</form>
+	</div>
 </section>
