--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -35,7 +35,8 @@ input[type=text],
 input[type=password],
 input[type=email],
 input[type=phone],
-input[type=url]{
+input[type=url],
+{
 	position: relative;
 	border:none;
 	border-bottom: solid 1px #000;
@@ -44,11 +45,21 @@ input[type=url]{
 	margin: 1rem 0;
 	&.ng-dirty{
 		&.ng-invalid{
-			background: #fff url(/img/invalid.png) no-repeat 98% center;
+			background: #fff url(/img/red-x.png) no-repeat 98% center;
 		}
 		&.ng-valid{
-			background: #fff url(/img/valid.png) no-repeat 98% center;
+			background: #fff url(/img/green-check.png) no-repeat 98% center;
 		}
+	}
+}
+
+select{
+	position: relative;
+	background-color: transparent;
+	width: 100%;
+	margin: 1rem 0;
+	option{
+		color: #0F0;
 	}
 }
 
