Tested out Registration, Login and Logout

--- a/src/modules/authentication/views/login.html
+++ b/src/modules/authentication/views/login.html
@@ -14,7 +14,7 @@
 			</div>
 			<div class="form-actions">
 				<a class="step next" data-ng-href="#" data-ng-click="vm.continue()" data-ng-if="vm.step===1">Continue</a>
-				<a class="step login" data-ng-href="#" data-ng-click="vm.signIn()" data-ng-if="vm.step===2">Sign In</a>
+				<a class="step login" data-ng-href="#" data-ng-click="vm.login()" data-ng-if="vm.step===2">Sign In</a>
 			</div>
 		</form>
 
