--- a/src/modules/core/views/home.html
+++ b/src/modules/core/views/home.html
@@ -1,4 +1,5 @@
-<section class="home" data-ng-controller="CoreCtrl as vm">
+<section class="home">
+<!-- 	
 	<h3>My Portfolios</h3>
 	<span class="stock symbol">Gold</span>
 	<span class="stock price">1501.23</span>
@@ -16,6 +17,9 @@
 
 	<stock symbol="AAPL"></stock>
 	<stock symbol="GOOG"></stock>
-	<stock symbol="MSFT"></stock>
+	<stock symbol="MSFT"></stock> 
+-->
+
+<span data-ng-bind="app.site | json"></span>
 
 </section>
