--- a/src/modules/core/views/home.html
+++ b/src/modules/core/views/home.html
@@ -1,25 +1,7 @@
 <section class="home">
-<!-- 	
-	<h3>My Portfolios</h3>
-	<span class="stock symbol">Gold</span>
-	<span class="stock price">1501.23</span>
-	<span class="stock down">-15.04</span>
-	<span class="stock up">+21.93</span>
-	<a href="#" class="stock action">Sell</a>
-	<a href="#" class="stock action">Buy</a>
-	<span class="badge">3</span>
-	<a href="#">My Link</a>
 
-	<form>
-	<input type="email" name="email" placeholder="email address" data-ng-model="email" required/>
-	<span class="fa fa-question-circle" tooltip="a valid email address. e.g. e@mail.com" tooltip-trigger="click" tooltip-placement="top"></span>
-	</form>
+	<h3>Markets</h3>
 
-	<stock symbol="AAPL"></stock>
-	<stock symbol="GOOG"></stock>
-	<stock symbol="MSFT"></stock> 
--->
-
-<span data-ng-bind="app.site | json"></span>
+	<market data-ng-repeat="market in app.markets" market="market"></market>
 
 </section>
