Got account module added for password reset. All of authentication complete. Still not updating menu after login/logout

--- a/src/modules/authentication/views/forgot.html
+++ b/src/modules/authentication/views/forgot.html
@@ -1,4 +1,4 @@
-<section class="forgot" data-ng-controller="AuthenticationCtrl as vm" data-ng-init="vm.loadForgot()">
+<section class="forgot" data-ng-controller="AuthenticationCtrl as vm">
 	<div class="form-group" data-ng-if="vm.step===1">
 		<input type="email" name="username" class="form-input" placeholder="Email Address" data-ng-model="vm.userId" required/>
 	</div>
