most of registration switched to hypermedia resources

--- a/src/modules/registration/views/complete.html
+++ b/src/modules/registration/views/complete.html
@@ -29,8 +29,8 @@
 	<fieldset>
 	  <legend>Selected Questions</legend>
 	  <dl>
-	    <dt ng-repeat-start="q in vm.user.Challenge">{{q.question}}</dt>
-	    <dd ng-repeat-end>{{q.answer}}</dd>
+	    <dt ng-repeat-start="q in vm.user.Challenge">{{q.Question}}</dt>
+	    <dd ng-repeat-end>{{q.Answer}}</dd>
 	  </dl>
 	</fieldset>
 
