--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,3 +25,4 @@ $fa-font-path: "../lib/font-awesome/fonts/";
 @import 'modules/authentication';
 @import 'modules/exchange';
 @import 'modules/news';
+@import 'modules/user';
