--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11820,26 +11820,46 @@ snap-content {
     font-weight: bold; }
 
 .user-list .header {
-  background: #CCC;
-  color: #777; }
-  .user-list .header span {
-    display: inline-block;
-    padding: .5rem; }
+  display: none; }
+  @media screen and (min-width: 768px) {
+    .user-list .header {
+      display: block;
+      background-color: #EEE;
+      padding: 1rem .5rem; }
+      .user-list .header span.username, .user-list .header span.display-name {
+        display: inline-block;
+        width: 20%;
+        font-weight: bold; } }
 .user-list .user {
-  padding: .5rem; }
-.user-list span {
-  display: inline-block;
-  padding: .5rem;
-  margin: 0; }
-  .user-list span .btn, .user-list span .btn-xs, .user-list span .btn-group-xs > .btn {
-    font-size: 35rem; }
-  .user-list span.btn-edit {
-    width: 6%; }
-  .user-list span.username {
-    width: 20%; }
-  .user-list span.display-name {
-    width: 20%; }
-  .user-list span.btn-lock, .user-list span.btn-unlock {
-    width: 5%; }
-  .user-list span.btn-activate, .user-list span.btn-deactivate {
-    width: 9%; }
+  border: solid 1px #EEE;
+  padding: 1rem .5rem; }
+  .user-list .user:before, .user-list .user:after {
+    content: " ";
+    display: table; }
+  .user-list .user:after {
+    clear: both; }
+  .user-list .user span {
+    display: block;
+    width: 64%;
+    float: left; }
+    @media screen and (min-width: 768px) {
+      .user-list .user span {
+        display: inline-block;
+        width: auto; }
+        .user-list .user span.username, .user-list .user span.display-name {
+          width: 20%; } }
+  .user-list .user .user-actions {
+    width: 13rem;
+    float: right;
+    vertical-align: middle; }
+    @media screen and (min-width: 768px) {
+      .user-list .user .user-actions {
+        width: 10rem; } }
+    .user-list .user .user-actions .btn {
+      display: inline-block;
+      font-size: 2.25rem;
+      width: 4rem; }
+      @media screen and (min-width: 768px) {
+        .user-list .user .user-actions .btn {
+          width: 2.75rem;
+          font-size: 1.5rem; } }
