--- a/src/modules/user/views/user.list.view.html
+++ b/src/modules/user/views/user.list.view.html
@@ -10,24 +10,25 @@
 			<span class="btn-deactivate" data-ng-show="user.isActive"></span>
 		</article>
 		<article class="user" data-ng-repeat="user in vm.users">
-			<button class="btn btn-xs btn-primary btn-edit">
-				<i class="fa fa-pencil"></i>
-			</button>
-			<span class="username" data-ng-bind="user.email"></span>
+			<span class="user-actions">
+				<button class="btn btn-xs btn-success btn-unlock" data-ng-show="user.locked">
+					<i class="fa fa-unlock"></i>
+				</button>
+				<button class="btn btn-xs btn-danger btn-lock" data-ng-show="!user.locked">
+					<i class="fa fa-lock"></i>
+				</button>
+				<button class="btn btn-xs btn-success btn-activate" data-ng-show="!user.isActive">
+					<i class="fa fa-power-off"></i>
+				</button>
+				<button class="btn btn-xs btn-danger btn-deactivate" data-ng-show="user.isActive">
+					<i class="fa fa-power-off"></i>
+				</button>
+				<a class="btn btn-xs btn-primary btn-edit" data-ui-sref="user-edit({id:user.id})">
+					<i class="fa fa-pencil"></i>
+				</a>
+			</span>
 			<span class="display-name" data-ng-bind="user.firstName + ' ' + user.lastName"></span>
-			<button class="btn btn-xs btn-success btn-unlock" data-ng-show="user.locked">
-				<i class="fa fa-unlock"></i>
-			</button>
-			<button class="btn btn-xs btn-danger btn-lock" data-ng-show="!user.locked">
-				<i class="fa fa-lock"></i>
-			</button>
-			<button class="btn btn-xs btn-success btn-activate" data-ng-show="!user.isActive">
-				<i class="fa fa-power-off"></i>
-			</button>
-			<button class="btn btn-xs btn-danger btn-deactivate" data-ng-show="user.isActive">
-				<i class="fa fa-power-off"></i>
-			</button>
-
+			<span class="username" data-ng-bind="user.email"></span>
 		</article>
 	</section>
 </section>
